[tool.poetry]
name = "chatbots-with-py"
version = "0.1.0"
description = ""
authors = ["xyz <jack@flnpb.com>"]
readme = "README.md"
packages = [{include = "chatbots_with_py"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
